<resources>
    <string name="app_name">goKlinik</string>
    <string name="btn_masuk">Masuk</string>
    <string name="btn_daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="edt_nama">Nama Sesuai KTP</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="edt_tgl_lahir">(YYYY-MM-DD)</string>
    <string name="jenkel">Jenis Kelamin</string>
    <string name="rb_wanita">Wanita</string>
    <string name="rb_pria">Pria</string>
    <string name="no_hp">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="showpass">Show Password</string>
    <string name="profil">Profil</string>
    <string name="logout">Keluar</string>
    <string name="nama_dokter">Nama Dokter</string>
    <string name="spesialis">Spesialis</string>
    <string name="tanggal">Tanggal</string>
    <string name="jam">Jam</string>
    <string name="keterangan">Keterangan</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="harga_obat">Harga Obat</string>
    <string name="keterangan_obat">Keterangan Obat</string>
    <string name="tambah_ke_keranjang">Tambah ke keranjang</string>
    <string name="subscribe_to_news">Subscribe to News</string>
    <string name="log_token">Log Token</string>
    <string name="default_notification_channel_id">default</string>
    <string name="default_notification_channel_name">default</string>
    <string name="msg_subscribed">Welcome to GoKlinik</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesanan_belum">Pesanan Belum</string>
    <string name="detail">Detail</string>
    <string name="total">Total</string>
    <string name="alamatt">Alamat</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="daftar_konsultasi">Daftar Konsultasi</string>

</resources>