<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".goKlinik.Activity.DaftarActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:minHeight="50dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:paddingTop="10dp"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:lines="1"
        android:minHeight="50dp"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showpass"
        android:checked="false"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="15dp"
        android:background="@color/purple_700" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:paddingTop="15dp"/>
    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edt_nama"
        android:lines="1"
        android:minHeight="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tgl_lahir"
        android:paddingTop="10dp"/>
    <EditText
        android:id="@+id/edt_tgl_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/edt_tgl_lahir"
        android:lines="1"
        android:minHeight="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenkel"
        />
    <RadioGroup
        android:id="@+id/rg_jenkel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/rb_pria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_pria" />
        <RadioButton
            android:id="@+id/rb_wanita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_wanita" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hp"
        android:paddingTop="10dp"/>
    <EditText
        android:id="@+id/edt_nohp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/no_hp"
        android:lines="1"
        android:minHeight="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:paddingTop="10dp"/>
    <EditText
        android:id="@+id/edt_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textLongMessage"
        android:hint="@string/alamat"
        android:lines="3"
        android:minHeight="50dp" />
    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_daftar"
        android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>
