<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@drawable/bg_white"
    tools:context=".goKlinik.Activity.MasukActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:paddingTop="300dp"
        />
    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:maxLines="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:paddingTop="25dp"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:lines="1" />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showpass"
        android:checked="false"/>
    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_masuk" />


</LinearLayout>