<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:id="@+id/tv_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:textSize="16sp"
                tools:text="@string/profil" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                tools:text="@string/username" />
            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:textSize="12sp"
                tools:text="@string/password" />
            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_username"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                tools:text="@string/nama" />

            <TextView
                android:id="@+id/tv_tgl_lahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nama"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                tools:text="@string/tgl_lahir" />

            <TextView
                android:id="@+id/tv_jenkel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tgl_lahir"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                tools:text="@string/jenkel" />

            <TextView
                android:id="@+id/tv_no_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_jenkel"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                tools:text="@string/no_hp" />

            <TextView
                android:id="@+id/tv_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_no_hp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="12sp"
                tools:text="@string/alamat" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>