<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitXY"
        tools:src="@tools:sample/avatars"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/nama_obat"
            />
        <TextView
            android:id="@+id/tv_item_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/harga_obat"
            />
        <TextView
            android:id="@+id/tv_item_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/keterangan_obat"
            />
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@android:color/white">

            <Button
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textColor="@android:color/white"
                android:background="@null"
                android:id="@+id/decrement"
                android:textStyle="bold"
                android:text="—"/>

            <TextView
                android:layout_width="70dp"
                android:background="@android:color/white"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/black"
                android:inputType="number"
                android:id="@+id/number"
                android:gravity="center"
                />
            <Button
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textColor="@android:color/white"
                android:background="@null"
                android:id="@+id/increment"
                android:text="+"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textSize="10sp"
            android:id="@+id/tmbhkeranjang"
            android:text="@string/tambah_ke_keranjang"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            />

    </LinearLayout>

</LinearLayout>