<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".goKlinik.Activity.DetailDokterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_dokter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@tools:sample/backgrounds/scenic" />
        </FrameLayout>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/nama_dokter"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>
        <TextView
            android:id="@+id/tv_spesialis"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:justificationMode="inter_word"
            android:text="@string/spesialis"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_keterangan"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:justificationMode="inter_word"
            android:text="@string/keterangan"
            />
        <View
            android:id="@+id/garis"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/purple_700" />
        <TextView
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:justificationMode="inter_word"
            android:text="Silahkan Pilih Jadwal" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_jadwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>



    </LinearLayout>
</ScrollView>